[gd_scene load_steps=13 format=3 uid="uid://dn03drrma3p5y"]

[ext_resource type="Script" path="res://scenes/StoryMenu.gd" id="1_66cjt"]
[ext_resource type="Resource" uid="uid://b2liyp0jv6vgq" path="res://assets/storyWeekList.tres" id="2_7t8os"]
[ext_resource type="FontFile" uid="uid://coqcg7h14duny" path="res://assets/fonts/vcr.ttf" id="4_rt1a8"]
[ext_resource type="SpriteFrames" uid="uid://bbjun33w44uoy" path="res://assets/images/menus/storymenu/campaign_menu_UI_assets.res" id="9_cmblc"]
[ext_resource type="Script" path="res://classes/AnimatedSprite.gd" id="10_j4qu2"]
[ext_resource type="Texture2D" uid="uid://dq6ww4di7h8uc" path="res://assets/images/menus/storymenu/difficulties/normal.png" id="11_hvcc2"]

[sub_resource type="Animation" id="Animation_avyuw"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"arrow left"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_4lm31"]
resource_name = "push"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"arrow push left"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, 5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_afupd"]
_data = {
"idle": SubResource("Animation_avyuw"),
"push": SubResource("Animation_4lm31")
}

[sub_resource type="Animation" id="Animation_ra2cl"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"arrow right"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_it523"]
resource_name = "push"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"arrow push right"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ctomo"]
_data = {
"idle": SubResource("Animation_ra2cl"),
"push": SubResource("Animation_it523")
}

[node name="StoryMenu" type="Node2D"]
script = ExtResource("1_66cjt")
week_list = ExtResource("2_7t8os")

[node name="WeekGroup" type="Node2D" parent="."]

[node name="TrackList" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 192.0
offset_top = 500.0
offset_right = 288.0
offset_bottom = 630.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.898039, 0.341176, 0.466667, 1)
theme_override_fonts/font = ExtResource("4_rt1a8")
theme_override_font_sizes/font_size = 32
text = "TRACKS

BOPEEBO
FRESH
DAD BATTLE"
horizontal_alignment = 1

[node name="ColoredBG" type="ColorRect" parent="."]
offset_top = 56.0
offset_right = 1280.0
offset_bottom = 456.0
color = Color(0, 0, 0, 1)

[node name="Characters" type="Node2D" parent="."]

[node name="CharacterPositions" type="Node2D" parent="."]

[node name="Player" type="Node2D" parent="CharacterPositions"]
position = Vector2(640, 450)

[node name="Opponent" type="Node2D" parent="CharacterPositions"]
position = Vector2(240, 440)

[node name="Spectator" type="Node2D" parent="CharacterPositions"]
position = Vector2(1055, 440)

[node name="TopBG" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 56.0
color = Color(0, 0, 0, 1)

[node name="ScoreCount" type="Label" parent="TopBG"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 1280.0
offset_bottom = 41.0
theme_override_fonts/font = ExtResource("4_rt1a8")
theme_override_font_sizes/font_size = 32
text = "WEEK SCORE: dubba"

[node name="WeekName" type="Label" parent="TopBG"]
layout_mode = 0
offset_top = 10.0
offset_right = 1270.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(1, 1, 1, 0.701961)
theme_override_fonts/font = ExtResource("4_rt1a8")
theme_override_font_sizes/font_size = 32
text = "DUBBA 2"
horizontal_alignment = 2

[node name="LeftArrow" type="AnimatedSprite2D" parent="."]
position = Vector2(915, 480)
sprite_frames = ExtResource("9_cmblc")
animation = &"arrow left"
centered = false
offset = Vector2(0, 5)
script = ExtResource("10_j4qu2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="LeftArrow"]
libraries = {
"": SubResource("AnimationLibrary_afupd")
}

[node name="RightArrow" type="AnimatedSprite2D" parent="."]
position = Vector2(1290, 480)
sprite_frames = ExtResource("9_cmblc")
animation = &"arrow right"
frame_progress = 1.0
centered = false
script = ExtResource("10_j4qu2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="RightArrow"]
libraries = {
"": SubResource("AnimationLibrary_ctomo")
}

[node name="Difficulty" type="Sprite2D" parent="."]
position = Vector2(973, 494)
texture = ExtResource("11_hvcc2")
centered = false
